Increase timeout for web socket connection

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,5 +13,7 @@ server {
    proxy_set_header Upgrade $http_upgrade;
    proxy_set_header Connection "Upgrade";
    proxy_set_header Host $host;
+   proxy_send_timeout 60m;
+   proxy_read_timeout 60m;
  }
 }
