--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ server {
  }
 
  location /mqtt      {
-   proxy_pass http://100.105.158.93:9001/mqtt;
+   proxy_pass http://mosquitto:9001/mqtt;
    proxy_http_version 1.1;
    proxy_set_header Upgrade $http_upgrade;
    proxy_set_header Connection "Upgrade";
